# kernel-driver-development

./: README.md
example-cmake/: CMakeLists.txt  hello.c
example-makefile/: Makefile  hello.c
misc/: Makefile  parameters.c
scull/: .gitignore  Makefile  main.c  scull.h  scull.init  scull_load  scull_unload
